[package]
name = "todo-cli-rs"
version = "1.0.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4.41", features = ["serde"] }
clap = { version = "4.5.47", features = ["derive"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
uuid = { version = "1.18.1", features = ["serde", "v4"] }
